generator: add validation of subprojects
specifically:
- only sigs+committees can have subprojects
- subprojects need at least one owners entry
- owners should be raw github links

I think the last one could/should change, but:
- I'm about to auto-generate links assuming this format, so I want to
  verify I can assume all owners are in this format
- I am not quite sure if we should treat sigs.yaml as public api and
  give notice/deprecation for field changes

--- a/generator/testdata/sigs.yaml
+++ b/generator/testdata/sigs.yaml
@@ -6,6 +6,8 @@ sigs:
     mission_statement: covers foo
     subprojects:
     - name: sub-foo
+      owners:
+      - "https://raw.githubusercontent.com/org/foo/main/OWNERS"
   - dir: sig-bar
     name: Bar
     label: bar
@@ -13,6 +15,8 @@ sigs:
     mission_statement: owns areas related to bar
     subprojects:
     - name: sub-bar
+      owners:
+      - "https://raw.githubusercontent.com/org/bar/main/test/OWNERS"
 workinggroups:
   - dir: wg-baz
     name: Baz
